--- a/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut.Rmd
+++ b/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut.Rmd
@@ -1,7 +1,5 @@
 # 2022-03-14 - Fixed mutation rates
 
-<!-- TODO - color based on change rate, grid on change type -->
-
 ## Setup
 
 ```{r}
@@ -39,8 +37,14 @@ summary_data <- read.csv(summary_data_loc, na.strings="NONE")
 summary_data$COPY_MUT_PROB <- as.factor(
   summary_data$COPY_MUT_PROB
 )
-summary_data$env_chg_rate <- as.factor(
-  summary_data$env_chg_rate
+summary_data$env_chg_rate <- factor(
+  summary_data$env_chg_rate,
+  levels=c(
+    "none",
+    "30",
+    "300",
+    "3000"
+  )
 )
 summary_data$env_condition <- as.factor(
   summary_data$env_condition
@@ -49,6 +53,49 @@ summary_data$env_type <- as.factor(
   summary_data$env_type
 )
 
+get_env_chg_rate_label <- function(env_chg_rate, env_type) {
+  if (env_chg_rate == "none" && env_type=="consta") {
+    return("none-a")
+  } else if (env_chg_rate == "none" && env_type=="constb") {
+    return("none-b")
+  } else if (env_chg_rate=="30") {
+    return("30")
+  } else if (env_chg_rate=="300") {
+    return("300")
+  } else if (env_chg_rate=="3000") {
+    return("3000")
+  } else {
+    return("unknown")
+  }
+}
+get_env_type_label <- function(env_type) {
+  if (env_type=="consta" || env_type=="constb") {
+    return("const")
+  } else if (env_type=="cycling") {
+    return("cycling")
+  } else if (env_type=="random") {
+    return("random")
+  }
+}
+summary_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  summary_data$env_chg_rate,
+  summary_data$env_type
+)
+summary_data$env_chg_rate_label <- factor(
+  summary_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+summary_data$env_type_label <- mapply(
+  get_env_type_label,
+  summary_data$env_type
+)
 ```
 
 Load time series data.
@@ -69,6 +116,26 @@ time_series_data$env_condition <- as.factor(
 time_series_data$env_type <- as.factor(
   time_series_data$env_type
 )
+
+time_series_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  time_series_data$env_chg_rate,
+  time_series_data$env_type
+)
+time_series_data$env_chg_rate_label <- factor(
+  time_series_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+time_series_data$env_type_label <- mapply(
+  get_env_type_label,
+  time_series_data$env_type
+)
 ```
 
 Miscellaneous setup.
@@ -84,58 +151,11 @@ plot_directory <- paste0(working_directory, "plots/")
 dir.create(plot_directory, showWarnings=FALSE)
 ```
 
-## Final mutation rates
-
-```{r}
-ggplot(
-    summary_data,
-    aes(
-      x=env_condition,
-      y=final_average_copy_mutation_rate,
-      fill=env_condition
-    )
-  ) +
-  geom_flat_violin(
-    position = position_nudge(x = .2, y = 0),
-    alpha = .8,
-    adjust=1.5
-  ) +
-  geom_point(
-    mapping=aes(color=env_condition),
-    position = position_jitter(width = .15),
-    size = .5,
-    alpha = 0.8
-  ) +
-  geom_boxplot(
-    width = .1,
-    outlier.shape = NA,
-    alpha = 0.5
-  ) +
-  facet_grid(
-    ~COPY_MUT_PROB
-  ) +
-  scale_color_brewer(
-    palette = cb_palette
-  ) +
-  scale_fill_brewer(
-    palette = cb_palette
-  ) +
-  theme(
-    legend.position="none",
-    axis.text.x = element_text(angle = 90)
-  )
-
-ggsave(
-  paste0(working_directory, "plots/", "final_copy_mutation_rate.pdf")
-)
-```
-
 ## Fitness over time
 
 ```{r}
 ggplot(
     time_series_data,
-    # filter(time_series_data, update>250000),
     aes(
       x=update,
       y=avg_fitness,
@@ -146,32 +166,37 @@ ggplot(
   stat_summary(geom="line", fun=mean) +
   stat_summary(
     geom="ribbon",
-    fun.min=min,
-    fun.max=max,
+    fun.data="mean_cl_boot",
+    fun.args=list(conf.int=0.95),
     alpha=0.2,
     linetype=0
   ) +
   # stat_summary(
   #   geom="ribbon",
-  #   fun.data="mean_cl_boot",
-  #   fun.args=list(conf.int=0.95),
+  #   fun.min=min,
+  #   fun.max=max,
   #   alpha=0.2,
   #   linetype=0
   # ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
   scale_y_continuous(
-    # trans=pseudo_log_trans(sigma=1,base=10)
     trans=log10_trans()
   ) +
   facet_grid(
-    COPY_MUT_PROB~env_type
+    COPY_MUT_PROB~env_type_label
   ) +
   theme(
     legend.position="bottom"
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "average_fitness_ot.pdf"),
-  width=18,
+  paste0(working_directory, "plots/", "avg_fitness_ot.png"),
+  width=15,
   height=10
 )
 ```
@@ -182,7 +207,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=dom_lineage_length_genotypes,
       fill=env_condition
     )
@@ -203,20 +228,25 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    # axis.text.x = element_text(angle = 90),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
   paste0(working_directory, "plots/", "dom_lineage_length_genotypes.pdf")
 )
@@ -228,7 +258,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_current_phylogenetic_diversity,
       fill=env_condition
     )
@@ -249,20 +279,25 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    # axis.text.x = element_text(angle = 90),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
   paste0(working_directory, "plots/", "phylo_current_phylogenetic_diversity.pdf")
 )
@@ -276,7 +311,7 @@ Genotypic Diversity (entropy of taxa in population).
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_diversity,
       fill=env_condition
     )
@@ -297,23 +332,24 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
-  ggtitle("Genotypic Diversity (entropy of taxa in population).") +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    # axis.text.x = element_text(angle = 90),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "phylo_diversity.pdf")
+  paste0(working_directory, "plots/", "genetic_diversity.pdf")
 )
 ```
 
@@ -323,7 +359,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_mean_pairwise_distance,
       fill=env_condition
     )
@@ -344,22 +380,26 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "phylo_mean_pairwise_distance.pdf")
+  paste0(working_directory, "plots/", "phylo_mean_pairwise_distance.png")
 )
 ```
 
@@ -369,7 +409,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_mrca_changes,
       fill=env_condition
     )
@@ -390,22 +430,26 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "phylo_mrca_changes.pdf")
+  paste0(working_directory, "plots/", "phylo_mrca_changes.png")
 )
 ```
 
@@ -434,12 +478,17 @@ ggplot(
   #   alpha=0.2,
   #   linetype=0
   # ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
   scale_y_continuous(
-    # trans=pseudo_log_trans(sigma=1,base=10)
     trans=log10_trans()
   ) +
   facet_grid(
-    COPY_MUT_PROB~env_type
+    COPY_MUT_PROB~env_type_label
   ) +
   theme(
     legend.position="bottom"
@@ -447,6 +496,11 @@ ggplot(
 
 ggsave(
   paste0(working_directory, "plots/", "phylo_mrca_changes_ot.pdf"),
+  width=18,
+  height=10
+)
+ggsave(
+  paste0(working_directory, "plots/", "phylo_mrca_changes_ot.png"),
   width=18,
   height=10
 )
@@ -458,7 +512,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_mrca_depth,
       fill=env_condition
     )
@@ -479,23 +533,81 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "phylo_mrca_depth.png")
+)
+```
+
+```{r}
+ggplot(
+    filter(time_series_data, (update%%1000)==0),
+    aes(
+      x=update,
+      y=phylo_mrca_depth,
+      fill=env_condition,
+      color=env_condition
+    )
+  ) +
+  stat_summary(geom="line", fun=mean) +
+  stat_summary(
+    geom="ribbon",
+    fun.min=min,
+    fun.max=max,
+    alpha=0.2,
+    linetype=0
+  ) +
+  # stat_summary(
+  #   geom="ribbon",
+  #   fun.data="mean_cl_boot",
+  #   fun.args=list(conf.int=0.95),
+  #   alpha=0.2,
+  #   linetype=0
+  # ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   # trans=log10_trans()
+  #   trans=pseudo_log_trans(sigma=1,base=10),
+  #   breaks=c(0, 10, 100, 1000, 10000)
+  # ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label
+  ) +
+  theme(
+    legend.position="bottom"
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "phylo_mrca_depth.pdf")
+  paste0(working_directory, "plots/", "phylo_mrca_depth_ot.pdf"),
+  width=18,
+  height=10
+)
+ggsave(
+  paste0(working_directory, "plots/", "phylo_mrca_depth_ot.png"),
+  width=18,
+  height=10
 )
 ```
 
@@ -551,7 +663,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_num_taxa_tree,
       fill=env_condition
     )
@@ -572,22 +684,26 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "phylo_num_taxa_tree.pdf")
+  paste0(working_directory, "plots/", "phylo_num_taxa_tree.png")
 )
 ```
 
@@ -597,7 +713,7 @@ ggsave(
 ggplot(
     summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=phylo_sum_pairwise_distance,
       fill=env_condition
     )
@@ -618,22 +734,26 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
-  facet_grid(
-    ~COPY_MUT_PROB
+  scale_fill_brewer(
+    palette=cb_palette
   ) +
   scale_color_brewer(
-    palette = cb_palette
+    palette=cb_palette
   ) +
-  scale_fill_brewer(
-    palette = cb_palette
+  scale_y_continuous(
+    trans=log10_trans()
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "phylo_sum_pairwise_distance.pdf")
+  paste0(working_directory, "plots/", "phylo_sum_pairwise_distance.png")
 )
 ```
 
